--- a/less/about-page.less
+++ b/less/about-page.less
@@ -1,15 +1,14 @@
 header {
     max-width: 1367px;
-    margin: 80px auto;
+    margin: 80px auto 0 auto;
     font-size: 3rem;
     text-align: center;
     font-family: @h2Font;
     color: @btnColor;
-    padding-bottom: 30px;
 }
 .aboutPage {
     max-width: 1367px;
-    margin: 0 auto 50px auto;
+    margin: 50px auto;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
